# cobblestone

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  interactive.rs  list.rs  main.rs  web.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/desktop/src/: api.ts  app.rs  lib.rs  main.rs  main.ts  tauri.rs
crates/desktop/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/desktop/src-tauri/src/commands/: graph.rs  mod.rs  notes.rs
crates/desktop/src/components/: editor.rs  mod.rs  sidebar.rs  toolbar.rs
frontend/: package-lock.json  package.json  tsconfig.base.json
frontend/apps/desktop/: index.html  package.json  vite.config.ts
frontend/apps/desktop/src/: main.ts
frontend/apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/web/src/: main.ts
frontend/scripts/: rasterize-icon.mjs
scripts/: apply-macos-icon.swift  generate-app-icons.py
