[package]
name        = "cb"
description = "Cobblestone — open-source knowledge base for your private thoughts"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
cobblestone-core = { path = "../core" }
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
clap       = { version = "4",   features = ["derive"] }
colored    = "2"
crossterm  = "0.28"
dirs       = "5"
open       = "5"
ratatui    = "0.29"
axum       = "0.8"
tokio      = { version = "1",   features = ["full"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
