[package]
name        = "cobblestone-desktop"
version     = "0.1.0"
edition     = "2024"
description = "Cobblestone desktop — Leptos 0.8 frontend"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos               = { version = "0.8", features = ["csr"] }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
serde                = { version = "1", features = ["derive"] }
serde-wasm-bindgen   = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Storage",
  "Window",
] }
