[package]
name        = "cobblestone-tauri"
version     = "0.1.0"
edition     = "2024"
description = "Cobblestone desktop — Tauri 2 native backend"

[lib]
name       = "cobblestone_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cobblestone-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cobblestone-core    = { path = "../../core" }
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
chrono              = "0.4"
